<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_grey"
        app:cardCornerRadius="@dimen/corner_radius_large"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_large">

            <TextView
                android:id="@+id/text_title"
                style="@style/text_large_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding_large"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/mock_dialog_title" />

            <TextView
                android:id="@+id/text_description"
                style="@style/text_body_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:layout_marginBottom="@dimen/margin_regular"
                android:paddingHorizontal="@dimen/padding_large"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="@string/mock_dialog_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:padding="0dp"
                android:insetBottom="0dp"
                android:text="@string/accept"
                android:textColor="@color/yellow_title"
                android:textStyle="bold"
                android:visibility="visible"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_description" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>