<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.shiro.arturosalcedogagliardi.ui.character.CharacterActivity" />

        <variable
            name="viewModel"
            type="com.shiro.arturosalcedogagliardi.ui.character.CharacterViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="?selectableItemBackgroundBorderless"
                android:onClick="@{() -> activity.closeActivity()}"
                android:src="@drawable/ic_close"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.RoundedCorners" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_user"
                    android:layout_width="@dimen/dialog_character_photo_size"
                    android:layout_height="@dimen/dialog_character_photo_size"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundedCorners"
                    tools:src="@drawable/logo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomInputLayout"
                    android:hint="@string/name_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomInputText"
                        android:maxLines="1"
                        android:text="@={viewModel.character.name}"
                        android:theme="@style/CustomTextSelectedHandles"
                        tools:text="Rick Sanchez"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomInputLayout"
                    android:hint="@string/origin_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomInputText"
                        android:maxLines="1"
                        android:text="@={viewModel.character.origin}"
                        android:theme="@style/CustomTextSelectedHandles"
                        tools:text="Earth (C-137)" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomInputLayout"
                    android:hint="@string/location_title"
                    android:layout_marginBottom="@dimen/margin_small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomInputText"
                        android:maxLines="1"
                        android:text="@={viewModel.character.location}"
                        android:theme="@style/CustomTextSelectedHandles"
                        tools:text="Citadel of Ricks" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/text_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="@dimen/padding_regular"
                        android:paddingEnd="@dimen/padding_small"
                        android:text="@string/gender_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/image_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_mini"
                        android:contentDescription="@null"
                        app:layout_constraintBottom_toBottomOf="@id/text_gender"
                        app:layout_constraintStart_toEndOf="@id/text_gender"
                        app:layout_constraintTop_toTopOf="@id/text_gender"
                        tools:src="@drawable/ic_gender_undefined" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_status_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_regular"
                        android:paddingEnd="@dimen/padding_regular"
                        android:text="@string/status_title"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_gender" />

                    <TextView
                        android:id="@+id/text_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.character.status}"
                        app:layout_constraintBottom_toBottomOf="@id/text_status_title"
                        app:layout_constraintStart_toEndOf="@id/text_status_title"
                        app:layout_constraintTop_toTopOf="@id/text_status_title"
                        tools:text="Alive"
                        tools:textColor="@color/green" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_species_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_regular"
                        android:paddingEnd="@dimen/padding_small"
                        android:text="@string/species_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_species"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@={viewModel.character.species}"
                        android:textColor="@color/black"
                        tools:text="Human" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/no_inset"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> viewModel.saveChanges()}"
            android:text="@string/save_changes"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            app:backgroundTint="@color/yellow_title" />

    </LinearLayout>

</layout>